...
  }

  return (
    <ScrollView className="bg-light-background-alt flex-1">
      <Stack.Screen options={{ headerShown: false }} />
      <View className="mt-4 px-4">
        <Text className="text-lg font-semibold text-foreground">Property AI Agent</Text>
        <Text className="mb-4 text-muted-foreground">
          Upload property documents and chat with AI to get insights or diagnostics of your
          properties and assets
        </Text>
      </View>
      <View className="mt-4 px-4">
...
