...
  containerStyle,
  disableComposer = false,
  keyboardAppearance = 'default',
  multiline = true,
  onInputSizeChanged,
  onTextChanged,
  placeholder = 'Type a message...',
  placeholderTextColor,
  text = '',
  textInputAutoFocus = false,
  textInputProps,
  textInputStyle,
  overlay,
...
